# PolyBox

./: .gitignore  .kilocodeignore  Cargo.toml  README.md  core_values.md
project_specs.archived&deprecated/: pb_action_tag_system.md  pb_api_contracts.md  pb_context_assembly.md  pb_core_architecture.md  pb_database_schemas.md  pb_generation_loop.md  pb_seeds.md  pb_ui_and_logging.md
project_specs.archived&deprecated/rules/: Documentation_And_Header_Standards_1.0.md  File_And_Module_Architecture_Rules_1.0.md  Maintenance_And_Refactoring_Rules_1.0.md
src/: hardware.rs  main.rs
src/actions/: dispatcher.rs  mod.rs  ordering.rs  parser.rs  results.rs  stripper.rs
src/config/: mod.rs  models.rs
src/context/: assembly_pipeline.rs  context_assembler.rs  history_trimmer.rs  mod.rs  section_builder.rs  static_formatter.rs  token_calculator.rs
src/db/: actions.rs  app_settings.rs  core.rs  logs.rs  memory.rs  mod.rs  models.rs  schema.rs  seeds.rs
src/tools/: mod.rs
src/web/: actions.rs  backups.rs  hardware.rs  health.rs  mod.rs  models.rs  route_settings.rs  routes.rs  services.rs
web/: index.html  styles.css
web/js/: action-modal.js  api.js  chat.js  database.js  footer.js  router.js  settings.js  sidebar.js  system-embed.js  system-orch.js  websocket.js
web/pages/: chat.html  settings.html  system.html
workspace/toolbox/: dir_create.py  dir_list.py  file_append.py  file_edit.py  file_move.py  file_read.py  file_recycle.py  file_write.py
