[package]
name = "polybox"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
axum = { version = "0.7", features = ["ws", "macros", "json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "server", "http1", "http2"] }
http = "1"

# WebSocket
tokio-tungstenite = "0.21"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async trait support
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite
rusqlite = { version = "0.31", features = ["bundled", "functions"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System info
sysinfo = "0.31"

# Utilities
thiserror = "1"
once_cell = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"
regex-lite = "0.1"
nvml-wrapper = "0.10"

[profile.release]
lto = true
codegen-units = 1
